# unpin.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
.ci/: pythonPackagesToInstallFromGit.txt
tests/: tests.py
unpin/: __init__.py  __main__.py  destination.py  patcher.py  util.py
